[package]
name = "chat-rs"
version = "0.1.0"
authors = ["Jeff <fei.code@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dashmap = "5.5.3"
futures = "0.3.30"
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
